# micro-player

./: Cargo.toml
.github/workflows/: build.yml
resources/icons/: icon.icns
src/: main.rs
ui/: appwindow.slint
